<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:backgroundTintMode="multiply"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/p_icon"
        android:layout_width="219dp"
        android:layout_height="219dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/project_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guidance" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="283dp"
        android:layout_height="125dp"
        android:inputType="none"
        android:text="@string/Careerguidancetext"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_icon"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="409dp"
        android:layout_height="346dp"
        android:layout_marginBottom="144dp"
        app:layout_constraintBottom_toBottomOf="@+id/p_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/nicepng_blue_gradient_png_498173"
        android:contentDescription="@string/background" />

</androidx.constraintlayout.widget.ConstraintLayout>