<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nicepng_blue_gradient_png_498173">

    <ImageView
        android:id="@+id/signuplogo"
        android:layout_width="177dp"
        android:layout_height="160dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/sign_up_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guidance" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuplogo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
        android:textColorHint="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="282dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="274dp"
        android:layout_height="52dp"
        android:layout_marginBottom="148dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="text|textVisiblePassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_up_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintVertical_bias="0.078"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>