<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nicepng_blue_gradient_png_498173">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="218dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/login_form_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guidance" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="138dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.058"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="288dp"
        android:layout_height="78dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="288dp"
            android:layout_height="54dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            tools:ignore="TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="291dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/login_form_button"
        android:layout_width="112dp"
        android:layout_height="62dp"
        android:backgroundTint="#2196F3"
        android:contentDescription="login form login button"
        android:text="Login"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.21" />


</androidx.constraintlayout.widget.ConstraintLayout>